--- a/Project 1/index2.html
+++ b/Project 1/index2.html
@@ -41,6 +41,8 @@
 
 			</section>
 		</main>
+		
+		<p> Documentary club is the premiere club at UCLA in terms of caputring history through lenses </p>
 
         <script src="anime.min.js"></script>
 		<script src="main.js"></script>
