--- a/Project 1/index2.html
+++ b/Project 1/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="no-js">
 	<head>
   		<title>Documentary Club</title>
@@ -41,15 +41,13 @@
 
 			</section>
 		</main>
-		
-		<p> Documentary club is the premiere club at UCLA in terms of caputring history through lenses </p>
 
         <script src="anime.min.js"></script>
 		<script src="main.js"></script>
 		<script>
 		(function() {
 			// Fake loading.
-			setTimeout(init, 1000);
+			setTimeout(init, 1500);
 
 			function init() {
 				document.body.classList.remove('loading');
