--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -8,6 +8,40 @@
   <link href='style.css' rel='stylesheet' type='text/css' />
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'  type='text/css'>
   <link rel="stylesheet" type="text/css" href="normalize.css" />
+
+  <script id="earthquake-template" type="text/x-handlebars-template">
+  
+  	<div class = "outerwrap">
+  		<div class = "wrapper">
+  		<ul id='sample1'>
+  			{{#each quake}}
+  			<li>{{data}}</li>
+  			{{/each}}
+  		</ul> <!-- Remove this sample element -->
+  			}
+  	</div>
+
+  	<div class = "wrapper">
+  		<ul id='sample2'>
+  			{{#each quake}}
+  			<li>{{data}}</li>
+  			{{/each}}
+  		</ul> <!-- Remove this sample element -->
+  	</div>
+
+ 	 <div class = "wrapper">
+ 		 <ul id='sample3'>
+ 		 	{{#each quake}}
+  			<li>{{data}}</li>
+  			{{/each}}
+ 		 </ul> <!-- Remove this sample element -->
+  	</div>
+
+  	<br class="break" />
+  </div>
+
+ </script>
+
 </head>
 <body>
 
@@ -19,21 +53,7 @@
 
   <h2> Bringing you the most recent data of earthquakes of magnitude of 4.5 or higher in the past week </h2>
 
-  <div class = "outerwrap">
-  	<div class = "wrapper">
-  		<ul id='sample1'></ul> <!-- Remove this sample element -->
-  	</div>
-
-  	<div class = "wrapper">
-  		<ul id='sample2'></ul> <!-- Remove this sample element -->
-  	</div>
-
- 	 <div class = "wrapper">
- 		 <ul id='sample3'></ul> <!-- Remove this sample element -->
-  	</div>
-
-  	<br class="break" />
-  </div>
+  
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
   <script src='script.js'></script>
